syntax = "proto3";

package o5.aws.deployer.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "psm/list/v1/annotations.proto";
import "psm/state/v1/annotations.proto";
import "psm/state/v1/metadata.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_pb";

message StackKeys {
  option (psm.state.v1.psm).name = "stack";

  string stack_id = 1 [
    (buf.validate.field).string.uuid = true,
    (psm.state.v1.field).primary_key = true
  ];

  string environment_id = 2 [(buf.validate.field).string.uuid = true];
  string cluster_id = 3 [(buf.validate.field).string.uuid = true];
}

message StackState {
  psm.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  StackKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  StackStatus status = 3 [(psm.list.v1.field).enum.filtering.filterable = true];

  StackStateData data = 4;
}

message StackStateData {
  optional StackDeployment current_deployment = 4;

  string stack_name = 5 [
    (buf.validate.field).string.pattern = "^[a-z][a-z0-9]+-[a-z][a-z0-9]+$",
    (psm.list.v1.field).string.open_text.searching = {
      searchable: true,
      field_identifier: "tsv_stack_name"
    }
  ];
  string application_name = 6 [
    (buf.validate.field).string.pattern = "^[a-z][a-z0-9]+$",
    (psm.list.v1.field).string.open_text.searching = {
      searchable: true,
      field_identifier: "tsv_app_name"
    }
  ];
  string environment_name = 7 [
    (buf.validate.field).string.pattern = "^[a-z][a-z0-9]+$",
    (psm.list.v1.field).string.open_text.searching = {
      searchable: true,
      field_identifier: "tsv_environment_name"
    }
  ];
  string environment_id = 8 [(buf.validate.field).string.uuid = true];

  repeated StackDeployment queued_deployments = 9;
}

enum StackStatus {
  STACK_STATUS_UNSPECIFIED = 0;
  STACK_STATUS_MIGRATING = 1;
  STACK_STATUS_AVAILABLE = 2;
}

message StackDeployment {
  string deployment_id = 1 [(buf.validate.field).string.uuid = true];
  string version = 2;
}

message StackEvent {
  psm.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];

  StackKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  StackEventType event = 3 [(buf.validate.field).required = true];
}

message StackEventType {
  oneof type {
    option (psm.list.v1.oneof).filtering.filterable = true;

    Configured configured = 2;
    DeploymentRequested deployment_requested = 3;
    DeploymentCompleted deployment_completed = 4;
    DeploymentFailed deployment_failed = 5;
    RunDeployment run_deployment = 7;
  }

  message Configured {
    string application_name = 1;
    string environment_id = 2;
    string environment_name = 3;
  }

  message DeploymentRequested {
    StackDeployment deployment = 1;
    string application_name = 2;
    string environment_name = 3;
    string environment_id = 4;
  }

  message DeploymentCompleted {
    StackDeployment deployment = 1;
  }

  message DeploymentFailed {
    StackDeployment deployment = 1;
    string error = 2;
  }

  message RunDeployment {
    string deployment_id = 1;
  }
}
